tolk-tester/tests/invalid-syntax/err-3001.tolk
tolk asdf;

/**
@compilation_should_fail
@stderr semver expected
@stderr tolk asdf;
 */
